--- a/Accueil.html
+++ b/Accueil.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AutoParts - Vente de Pièces Auto</title>
-  <link rel="stylesheet" href="z.css">
+  <link rel="stylesheet" href="Accueil.css">
 </head>
 <body>
   <!-- HEADER -->
