--- a/PNEUS2.html
+++ b/PNEUS2.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Détail produit - AutoParts</title>
-<link rel="stylesheet" href="z.css" />
+<link rel="stylesheet" href="Accueil.css" />
 
 
   
