--- a/PNEUS1.html
+++ b/PNEUS1.html
@@ -73,6 +73,25 @@
     </a>
 
 
+   <a href="PNEUS2.html?id=pneu1" class="produit-card">
+      <div class="slider" data-index="0">
+        <div class="slider-images">
+          <img src="img/pneu.webp" alt="Pneu Michelin Energy 16">
+          <img src="img/pneu.webp" alt="Pneu Michelin Energy 16">
+          <img src="img/pneu.webp" alt="Pneu Michelin Energy 16">
+        </div>
+        <button class="slider-btn left" aria-label="Image précédente">&#10094;</button>
+        <button class="slider-btn right" aria-label="Image suivante">&#10095;</button>
+      </div>
+      <h3>Pneu Michelin Energy 16</h3>
+      <p>Prix : 60 000 FCFA</p>
+      <p>Fiable </p>
+    </a>
+
+
+ 
+
+
 
     
   </div>
