--- a/index.html
+++ b/index.html
@@ -34,28 +34,28 @@
       <a class="telly" href="PNEUS1.html">
         <div class="produit">
         <img src="img2/moteur.webp" alt="Pneu">
-        <h4>1.Moteur & Pièces Associées</h4>
+        <h4>1.Meuble et décoration</h4>
        </div>
       </a>
 
       <a class="telly" href="PNEUS1.html">
         <div class="produit">
         <img src="img2/Embrayage_et_transmission.webp" alt="Pneu">
-        <h4>2.Transmission & Embrayage</h4>
+        <h4>2.Salle de bain</h4>
        </div>
       </a>
 
      <a class="telly" href="PNEUS1.html">
         <div class="produit">
         <img src="img2/Freinage.jpg" alt="Pneu">
-        <h4>3.Freinage</h4>
+        <h4>3.Peinture et finitions</h4>
        </div>
      </a>
 
      <a class="telly" href="PNEUS1.html">
         <div class="produit">
         <img src="img2/suspenssion_et_direction.jpg" alt="Pneu">
-        <h4>4.Suspension & Direction</h4>
+        <h4>4.Porte et fenêtre</h4>
        </div>
      </a>
 
@@ -64,45 +64,39 @@
       <a class="telly" href="PNEUS1.html">
         <div class="produit">
         <img src="img2/refroidissement_et_chauffage.avif" alt="Pneu">
-        <h4>5.Refroidissement & Chauffage</h4>
+        <h4>5.Cuisine</h4>
        </div>
       </a>
 
       <a class="telly" href="PNEUS1.html">
         <div class="produit">
         <img src="img2/echappement.webp" alt="Pneu">
-        <h4>6.Échappement</h4>
+        <h4>6.Éclairage</h4>
        </div>
       </a>
 
       <a class="telly" href="PNEUS1.html">
         <div class="produit">
         <img src="img2/electric.webp" alt="Pneu">
-        <h4>7.Électricité & Électronique</h4>
+        <h4>7.Outillage et bricolage</h4>
        </div>
       </a>
 
       <a class="telly" href="PNEUS1.html">
         <div class="produit">
         <img src="img2/carrosserie.jpg" alt="Pneu">
-        <h4>8.Carrosserie & Extérieur</h4>
+        <h4>8.Sécurité</h4>
        </div>
       </a>
 
       <a class="telly" href="PNEUS1.html">
         <div class="produit">
         <img src="img2/interieur_et_accessoires.jpg" alt="Pneu">
-        <h4>9.Intérieur & Accessoires</h4>
+        <h4>9.Jardinage</h4>
        </div>
       </a>
 
-      <a class="telly" href="PNEUS1.html">
-        <div class="produit">
-        <img src="img2/jante_et_pneu.jpg" alt="Pneu">
-        <h4>10.Pneus & Jantes</h4>
-       </div>
-      </a>
-
+     
      
 
 
