--- a/index.html
+++ b/index.html
@@ -33,28 +33,28 @@
 
       <a class="telly" href="PNEUS1.html">
         <div class="produit">
-        <img src="img2/moteur.webp" alt="Pneu">
+        <img src="img/Meuble_et_decoration.jpg" alt="Pneu">
         <h4>1.Meuble et décoration</h4>
        </div>
       </a>
 
       <a class="telly" href="PNEUS1.html">
         <div class="produit">
-        <img src="img2/Embrayage_et_transmission.webp" alt="Pneu">
+        <img src="img/Salle_de_bain.jpg" alt="Pneu">
         <h4>2.Salle de bain</h4>
        </div>
       </a>
 
      <a class="telly" href="PNEUS1.html">
         <div class="produit">
-        <img src="img2/Freinage.jpg" alt="Pneu">
+        <img src="img/Peinture_et_finition.jpg" alt="Pneu">
         <h4>3.Peinture et finitions</h4>
        </div>
      </a>
 
      <a class="telly" href="PNEUS1.html">
         <div class="produit">
-        <img src="img2/suspenssion_et_direction.jpg" alt="Pneu">
+        <img src="img/Portes_et_fentres.jpg" alt="Pneu">
         <h4>4.Porte et fenêtre</h4>
        </div>
      </a>
@@ -63,35 +63,35 @@
 
       <a class="telly" href="PNEUS1.html">
         <div class="produit">
-        <img src="img2/refroidissement_et_chauffage.avif" alt="Pneu">
+        <img src="img/Cuisine.jpg" alt="Pneu">
         <h4>5.Cuisine</h4>
        </div>
       </a>
 
       <a class="telly" href="PNEUS1.html">
         <div class="produit">
-        <img src="img2/echappement.webp" alt="Pneu">
+        <img src="img/Eclairage.jpg" alt="Pneu">
         <h4>6.Éclairage</h4>
        </div>
       </a>
 
       <a class="telly" href="PNEUS1.html">
         <div class="produit">
-        <img src="img2/electric.webp" alt="Pneu">
+        <img src="img/Outillage_et_bricollage.jpg" alt="Pneu">
         <h4>7.Outillage et bricolage</h4>
        </div>
       </a>
 
       <a class="telly" href="PNEUS1.html">
         <div class="produit">
-        <img src="img2/carrosserie.jpg" alt="Pneu">
+        <img src="img/Securite.jpg" alt="Pneu">
         <h4>8.Sécurité</h4>
        </div>
       </a>
 
       <a class="telly" href="PNEUS1.html">
         <div class="produit">
-        <img src="img2/interieur_et_accessoires.jpg" alt="Pneu">
+        <img src="img2/Jardinage.jpg" alt="Pneu">
         <h4>9.Jardinage</h4>
        </div>
       </a>
