--- a/index.html
+++ b/index.html
@@ -33,28 +33,28 @@
 
       <a class="telly" href="PNEUS1.html">
         <div class="produit">
-        <img src="img/Meuble_et_decoration.jpg" alt="Pneu">
+        <img src="img/Meuble_et_decoration.jpg" alt="Meuble et décoration">
         <h4>1.Meuble et décoration</h4>
        </div>
       </a>
 
       <a class="telly" href="PNEUS1.html">
         <div class="produit">
-        <img src="img/Salle_de_bain.jpg" alt="Pneu">
+        <img src="img/Salle_de_bain.jpg" alt="Salle de bain">
         <h4>2.Salle de bain</h4>
        </div>
       </a>
 
      <a class="telly" href="PNEUS1.html">
         <div class="produit">
-        <img src="img/Peinture_et_finition.jpg" alt="Pneu">
+        <img src="img/Peinture_et_finition.jpg" alt="Peinture et finitions">
         <h4>3.Peinture et finitions</h4>
        </div>
      </a>
 
      <a class="telly" href="PNEUS1.html">
         <div class="produit">
-        <img src="img/Portes_et_fentres.jpg" alt="Pneu">
+        <img src="img/Portes_et_fenetres.jpg" alt="Porte et fenêtre">
         <h4>4.Porte et fenêtre</h4>
        </div>
      </a>
@@ -63,35 +63,35 @@
 
       <a class="telly" href="PNEUS1.html">
         <div class="produit">
-        <img src="img/Cuisine.jpg" alt="Pneu">
+        <img src="img/Cuisine.jpg" alt="Cuisine">
         <h4>5.Cuisine</h4>
        </div>
       </a>
 
       <a class="telly" href="PNEUS1.html">
         <div class="produit">
-        <img src="img/Eclairage.jpg" alt="Pneu">
+        <img src="img/Eclairage.jpg" alt="Éclairage">
         <h4>6.Éclairage</h4>
        </div>
       </a>
 
       <a class="telly" href="PNEUS1.html">
         <div class="produit">
-        <img src="img/Outillage_et_bricollage.jpg" alt="Pneu">
+        <img src="img/Outillage_et_bricollage.jpg" alt="Outillage et bricolage">
         <h4>7.Outillage et bricolage</h4>
        </div>
       </a>
 
       <a class="telly" href="PNEUS1.html">
         <div class="produit">
-        <img src="img/Securite.jpg" alt="Pneu">
+        <img src="img/Securite.jpg" alt="Sécurité">
         <h4>8.Sécurité</h4>
        </div>
       </a>
 
       <a class="telly" href="PNEUS1.html">
         <div class="produit">
-        <img src="img2/Jardinage.jpg" alt="Pneu">
+        <img src="img2/Jardinage.jpg" alt="Jardinage">
         <h4>9.Jardinage</h4>
        </div>
       </a>
