--- a/PNEUS2.html
+++ b/PNEUS2.html
@@ -48,7 +48,7 @@ const PRODUITS = {
     prix: 60000,
     devise: 'FCFA',
     desc: "Un pneu fiable et durable, parfait pour les routes africaines, avec une excellente adhérence et une longue durée de vie.",
-    images: ["img/pneu.webp","img/pneu.webp","img/pneu.webp"],
+    images: ["canaper1.jpg","canaper2.jpg","canaper3.jpg"],
     wa: "221781739814",    // Sans +, format international Sénégal
     tel: "+221770000001"   // Avec + pour tel
   },
