--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
       <a class="telly" href="PNEUS1.html">
         <div class="produit">
-        <img src="img2/Jardinage.jpg" alt="Jardinage">
+        <img src="img/Jardinage.jpg" alt="Jardinage">
         <h4>9.Jardinage</h4>
        </div>
       </a>
