--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AutoParts - Vente de Pièces Auto</title>
+  <title>Brico</title>
   <link rel="stylesheet" href="Accueil.css">
 </head>
 <body>
   <!-- HEADER -->
   <header>
-    <div class="logo">AutoParts</div>
+    <div class="logo">BricoParts</div>
     <nav>
       <ul>
-       
         <li><a href="#produits">Produits</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#contact">Contact</a></li>
@@ -28,7 +27,7 @@
 
   <!-- PRODUITS -->
   <section id="produits" class="produits">
-    <h2>Nos Pièces Auto</h2>
+    <h2>Nos catégories</h2>
     <div class="produits-grid">
 
       <a class="telly" href="PNEUS1.html">
@@ -148,7 +147,7 @@
 
   <!-- FOOTER -->
   <footer>
-    <p>&copy; 2025 AutoParts - Tous droits réservés</p>
+    <p>&copy; 2025 BricoParts - Tous droits réservés</p>
   </footer>
 </body>
 </html>
