--- a/PNEUS2.html
+++ b/PNEUS2.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Détail produit - AutoParts</title>
+<title>Détail produit - BricoParts</title>
 <link rel="stylesheet" href="Accueil.css" />
 
 
@@ -12,11 +12,10 @@
 </head>
 <body>
 <header>
-  <div class="logo">AutoParts</div>
+  <div class="logo">BricoParts</div>
   <nav>
     <ul>
       <li><a href="auto.html">Accueil</a></li>
-      <li><a href="pneus.html">Pneus</a></li>
       <li><a href="index.html#contact">Contact</a></li>
     </ul>
   </nav>
