--- a/PNEUS2.html
+++ b/PNEUS2.html
@@ -28,14 +28,14 @@
   <div class="prix" id="prod-prix"></div>
   <div class="desc" id="prod-desc"></div>
   <div class="cta-wrap">
-    <a id="btn-wa" class="btn-cta" target="_blank" rel="noopener">Acheter sur WhatsApp</a>
+    <a id="btn-wa" class="btn-cta" target="_blank" rel="noopener">Commander sur WhatsApp</a>
     <a id="btn-appel" class="btn-cta btn-appel">Appeler le vendeur</a>
   </div>
   <a href="PNEUS1.html" class="retour">&larr; Retour aux produits</a>
 </main>
 
 <footer>
-  <p>&copy; 2025 AutoParts - Tous droits réservés</p>
+  <p>&copy; 2025 BricoParts - Tous droits réservés</p>
 </footer>
 
 <script>
@@ -46,7 +46,24 @@ const PRODUITS = {
     nom: 'Pneu1',
     prix: 60000,
     devise: 'FCFA',
-    desc: "Un pneu fiable et durable, parfait pour les routes africaines, avec une excellente adhérence et une longue durée de vie.",
+    desc: "Canapé Moderne en Tissu Côtelé – Élégance et Confort
+Apportez une touche de sophistication à votre salon avec ce canapé en tissu côtelé bleu. Son design contemporain et son confort exceptionnel en font un choix idéal pour tout intérieur moderne.
+
+Caractéristiques :
+Design épuré avec tissu côtelé doux et résistant.
+
+Confort supérieur grâce à ses coussins rembourrés et ses accoudoirs larges.
+
+Dimensions : 200 x 90 x 85 cm
+
+Coussins décoratifs inclus pour une touche de couleur.
+
+Pourquoi le choisir ?
+Polyvalent et élégant, parfait pour tous les styles de décoration.
+
+Facile à entretenir, idéal pour une utilisation quotidienne.
+  
+Livraison gratuite incluse !",
     images: ["canaper1.jpg","canaper2.jpg","canaper3.jpg"],
     wa: "221781739814",    // Sans +, format international Sénégal
     tel: "+221770000001"   // Avec + pour tel
