--- a/PNEUS2.html
+++ b/PNEUS2.html
@@ -46,24 +46,13 @@ const PRODUITS = {
     nom: 'Pneu1',
     prix: 60000,
     devise: 'FCFA',
-    desc: "Canapé Moderne en Tissu Côtelé – Élégance et Confort
-Apportez une touche de sophistication à votre salon avec ce canapé en tissu côtelé bleu. Son design contemporain et son confort exceptionnel en font un choix idéal pour tout intérieur moderne.
-
-Caractéristiques :
-Design épuré avec tissu côtelé doux et résistant.
-
-Confort supérieur grâce à ses coussins rembourrés et ses accoudoirs larges.
-
+    desc: "Canapé Moderne Côtelé – Confort & Élégance
+Ajoutez une touche de style avec ce canapé en tissu côtelé bleu. Design épuré, confort optimal et coussins décoratifs inclus.
 Dimensions : 200 x 90 x 85 cm
+Prix : 250 000 FCFA
+Livraison gratuite !
 
-Coussins décoratifs inclus pour une touche de couleur.
-
-Pourquoi le choisir ?
-Polyvalent et élégant, parfait pour tous les styles de décoration.
-
-Facile à entretenir, idéal pour une utilisation quotidienne.
-  
-Livraison gratuite incluse !",
+",
     images: ["canaper1.jpg","canaper2.jpg","canaper3.jpg"],
     wa: "221781739814",    // Sans +, format international Sénégal
     tel: "+221770000001"   // Avec + pour tel
