--- a/PNEUS2.html
+++ b/PNEUS2.html
@@ -53,7 +53,7 @@ Prix : 250 000 FCFA
 Livraison gratuite !
 
 ",
-    images: ["canaper1.jpg","canaper2.jpg","canaper3.jpg"],
+    images: ["canaper.jpg","canaper1.jpg","canaper2.jpg","canaper3.jpg,"canaper4.jpg"],
     wa: "221781739814",    // Sans +, format international Sénégal
     tel: "+221770000001"   // Avec + pour tel
   },
