--- a/PNEUS2.html
+++ b/PNEUS2.html
@@ -46,13 +46,10 @@ const PRODUITS = {
     nom: 'Pneu1',
     prix: 60000,
     devise: 'FCFA',
-    desc: "Canapé Moderne Côtelé – Confort & Élégance
-Ajoutez une touche de style avec ce canapé en tissu côtelé bleu. Design épuré, confort optimal et coussins décoratifs inclus.
-Dimensions : 200 x 90 x 85 cm
-Prix : 250 000 FCFA
-Livraison gratuite !
-
-",
+    desc: 
+      "
+   Canapé Moderne Côtelé Bleu
+   Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.",
     images: ["canaper.jpg","canaper1.jpg","canaper2.jpg","canaper3.jpg,"canaper4.jpg"],
     wa: "221781739814",    // Sans +, format international Sénégal
     tel: "+221770000001"   // Avec + pour tel
