--- a/PNEUS2.html
+++ b/PNEUS2.html
@@ -50,7 +50,7 @@ const PRODUITS = {
       "
    Canapé Moderne Côtelé Bleu
    Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.",
-    images: ["canaper.jpg","canaper1.jpg","canaper2.jpg","canaper3.jpg,"canaper4.jpg"],
+    images: ["canaper.jpg","canaper1.jpg","canaper2.jpg","canaper3.jpg","canaper4.jpg"],
     wa: "221781739814",    // Sans +, format international Sénégal
     tel: "+221770000001"   // Avec + pour tel
   },
