--- a/PNEUS2.html
+++ b/PNEUS2.html
@@ -46,9 +46,8 @@ const PRODUITS = {
     nom: 'Pneu1',
     prix: 60000,
     devise: 'FCFA',
-    desc: 
-      "
-   Canapé Moderne Côtelé Bleu
+    desc: "
+      Canapé Moderne Côtelé Bleu
    Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.",
     images: ["canaper.jpg","canaper1.jpg","canaper2.jpg","canaper3.jpg","canaper4.jpg"],
     wa: "221781739814",    // Sans +, format international Sénégal
