--- a/PNEUS1.html
+++ b/PNEUS1.html
@@ -22,7 +22,7 @@
 </header>
 
 <main>
-  <h2>Nos Pneus</h2>
+  <h2>Nos canapés</h2>
   <div class="produits-grid">
 
     <a href="PNEUS2.html?id=pneu1" class="produit-card">
@@ -206,3 +206,4 @@
 </script>
 </body>
 </html>
+
