--- a/PNEUS1.html
+++ b/PNEUS1.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="Produits.css">
 
 
-</head>
+</head> 
 <body>
 
 <header>
@@ -24,6 +24,23 @@
 <main>
   <h2>Nos canapés</h2>
   <div class="produits-grid">
+
+
+    <a href="PNEUS2.html?id=canape1" class="produit-card">
+  <div class="slider" data-index="0">
+    <div class="slider-images">
+      <img src="canaper.jpg" alt="Canapé en cuir">
+      <img src="canaper1.jpg" alt="Canapé en cuir">
+      <img src="canaper2.jpg" alt="Canapé en cuir">
+      <img src="canaper3.jpg" alt="Canapé en cuir">
+      <img src="canaper4.jpg" alt="Canapé en cuir">
+    </div>
+    <button class="slider-btn left" aria-label="Image précédente">&#10094;</button>
+    <button class="slider-btn right" aria-label="Image suivante">&#10095;</button>
+  </div>
+  <h3>Canapé de cuir</h3>
+  <p>Prix : 600 000 FCFA</p>
+</a>
 
     <a href="PNEUS2.html?id=pneu1" class="produit-card">
       <div class="slider" data-index="0">
@@ -206,5 +223,6 @@
 </script>
 </body>
 </html>
+
 
 
