--- a/PNEUS2.html
+++ b/PNEUS2.html
@@ -41,8 +41,10 @@
 <script>
 /* ====== Données produits ====== */
 const PRODUITS = {
+    
 
-  "pneu1": {
+
+  "canape1": {
     nom: 'Pneu1',
     prix: 60000,
     devise: 'FCFA',
@@ -138,3 +140,4 @@ function initSlider(sliderEl){
 </script>
 </body>
 </html>
+
