--- a/PNEUS2.html
+++ b/PNEUS2.html
@@ -44,7 +44,91 @@ const PRODUITS = {
     
 
 
-  "canape1": {
+  "pneu1": {
+    nom: 'Pneu1',
+    prix: 60000,
+    devise: 'FCFA',
+    desc: "
+      Canapé Moderne Côtelé Bleu
+   Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.",
+    images: ["canaper.jpg","canaper1.jpg","canaper2.jpg","canaper3.jpg","canaper4.jpg"],
+    wa: "221781739814",    // Sans +, format international Sénégal
+    tel: "+221770000001"   // Avec + pour tel
+  },
+
+  "pneu2": {
+    nom: 'Pneu1',
+    prix: 60000,
+    devise: 'FCFA',
+    desc: "
+      Canapé Moderne Côtelé Bleu
+   Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.",
+    images: ["canaper.jpg","canaper1.jpg","canaper2.jpg","canaper3.jpg","canaper4.jpg"],
+    wa: "221781739814",    // Sans +, format international Sénégal
+    tel: "+221770000001"   // Avec + pour tel
+  },
+
+  "pneu3": {
+    nom: 'Pneu1',
+    prix: 60000,
+    devise: 'FCFA',
+    desc: "
+      Canapé Moderne Côtelé Bleu
+   Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.",
+    images: ["canaper.jpg","canaper1.jpg","canaper2.jpg","canaper3.jpg","canaper4.jpg"],
+    wa: "221781739814",    // Sans +, format international Sénégal
+    tel: "+221770000001"   // Avec + pour tel
+  },
+
+  "pneu4": {
+    nom: 'Pneu1',
+    prix: 60000,
+    devise: 'FCFA',
+    desc: "
+      Canapé Moderne Côtelé Bleu
+   Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.",
+    images: ["canaper.jpg","canaper1.jpg","canaper2.jpg","canaper3.jpg","canaper4.jpg"],
+    wa: "221781739814",    // Sans +, format international Sénégal
+    tel: "+221770000001"   // Avec + pour tel
+  },
+
+  "pneu5": {
+    nom: 'Pneu1',
+    prix: 60000,
+    devise: 'FCFA',
+    desc: "
+      Canapé Moderne Côtelé Bleu
+   Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.",
+    images: ["canaper.jpg","canaper1.jpg","canaper2.jpg","canaper3.jpg","canaper4.jpg"],
+    wa: "221781739814",    // Sans +, format international Sénégal
+    tel: "+221770000001"   // Avec + pour tel
+  },
+
+  "pneu6": {
+    nom: 'Pneu1',
+    prix: 60000,
+    devise: 'FCFA',
+    desc: "
+      Canapé Moderne Côtelé Bleu
+   Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.",
+    images: ["canaper.jpg","canaper1.jpg","canaper2.jpg","canaper3.jpg","canaper4.jpg"],
+    wa: "221781739814",    // Sans +, format international Sénégal
+    tel: "+221770000001"   // Avec + pour tel
+  },
+
+  "pneu7": {
+    nom: 'Pneu1',
+    prix: 60000,
+    devise: 'FCFA',
+    desc: "
+      Canapé Moderne Côtelé Bleu
+   Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.",
+    images: ["canaper.jpg","canaper1.jpg","canaper2.jpg","canaper3.jpg","canaper4.jpg"],
+    wa: "221781739814",    // Sans +, format international Sénégal
+    tel: "+221770000001"   // Avec + pour tel
+  },
+
+  "pneu8": {
     nom: 'Pneu1',
     prix: 60000,
     devise: 'FCFA',
@@ -140,4 +224,5 @@ function initSlider(sliderEl){
 </script>
 </body>
 </html>
+
 
