--- a/PNEUS2.html
+++ b/PNEUS2.html
@@ -48,9 +48,10 @@ const PRODUITS = {
     nom: 'Pneu1',
     prix: 60000,
     devise: 'FCFA',
-    desc: ˋ
-      Canapé Moderne Côtelé Bleu
-   Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.ˋ,
+    desc: `
+    Canapé Moderne Côtelé Bleu
+    Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.
+  `,
     images: ["canaper.jpg","canaper1.jpg","canaper2.jpg","canaper3.jpg","canaper4.jpg"],
     wa: "221781739814",    // Sans +, format international Sénégal
     tel: "+221770000001"   // Avec + pour tel
@@ -224,6 +225,7 @@ function initSlider(sliderEl){
 </script>
 </body>
 </html>
+
 
 
 
