--- a/PNEUS2.html
+++ b/PNEUS2.html
@@ -61,9 +61,10 @@ const PRODUITS = {
     nom: 'Pneu1',
     prix: 60000,
     devise: 'FCFA',
-    desc: "
-      Canapé Moderne Côtelé Bleu
-   Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.",
+    desc: `
+    Canapé Moderne Côtelé Bleu
+    Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.
+  `,
     images: ["canaper.jpg","canaper1.jpg","canaper2.jpg","canaper3.jpg","canaper4.jpg"],
     wa: "221781739814",    // Sans +, format international Sénégal
     tel: "+221770000001"   // Avec + pour tel
@@ -73,9 +74,10 @@ const PRODUITS = {
     nom: 'Pneu1',
     prix: 60000,
     devise: 'FCFA',
-    desc: "
-      Canapé Moderne Côtelé Bleu
-   Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.",
+    desc: `
+    Canapé Moderne Côtelé Bleu
+    Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.
+  `,
     images: ["canaper.jpg","canaper1.jpg","canaper2.jpg","canaper3.jpg","canaper4.jpg"],
     wa: "221781739814",    // Sans +, format international Sénégal
     tel: "+221770000001"   // Avec + pour tel
@@ -85,9 +87,10 @@ const PRODUITS = {
     nom: 'Pneu1',
     prix: 60000,
     devise: 'FCFA',
-    desc: "
-      Canapé Moderne Côtelé Bleu
-   Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.",
+    desc: `
+    Canapé Moderne Côtelé Bleu
+    Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.
+  `,
     images: ["canaper.jpg","canaper1.jpg","canaper2.jpg","canaper3.jpg","canaper4.jpg"],
     wa: "221781739814",    // Sans +, format international Sénégal
     tel: "+221770000001"   // Avec + pour tel
@@ -97,9 +100,10 @@ const PRODUITS = {
     nom: 'Pneu1',
     prix: 60000,
     devise: 'FCFA',
-    desc: "
-      Canapé Moderne Côtelé Bleu
-   Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.",
+    desc: `
+    Canapé Moderne Côtelé Bleu
+    Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.
+  `,
     images: ["canaper.jpg","canaper1.jpg","canaper2.jpg","canaper3.jpg","canaper4.jpg"],
     wa: "221781739814",    // Sans +, format international Sénégal
     tel: "+221770000001"   // Avec + pour tel
@@ -109,9 +113,10 @@ const PRODUITS = {
     nom: 'Pneu1',
     prix: 60000,
     devise: 'FCFA',
-    desc: "
-      Canapé Moderne Côtelé Bleu
-   Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.",
+    desc: `
+    Canapé Moderne Côtelé Bleu
+    Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.
+  `,
     images: ["canaper.jpg","canaper1.jpg","canaper2.jpg","canaper3.jpg","canaper4.jpg"],
     wa: "221781739814",    // Sans +, format international Sénégal
     tel: "+221770000001"   // Avec + pour tel
@@ -121,9 +126,10 @@ const PRODUITS = {
     nom: 'Pneu1',
     prix: 60000,
     devise: 'FCFA',
-    desc: "
-      Canapé Moderne Côtelé Bleu
-   Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.",
+    desc: `
+    Canapé Moderne Côtelé Bleu
+    Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.
+  `,
     images: ["canaper.jpg","canaper1.jpg","canaper2.jpg","canaper3.jpg","canaper4.jpg"],
     wa: "221781739814",    // Sans +, format international Sénégal
     tel: "+221770000001"   // Avec + pour tel
@@ -133,14 +139,17 @@ const PRODUITS = {
     nom: 'Pneu1',
     prix: 60000,
     devise: 'FCFA',
-    desc: "
-      Canapé Moderne Côtelé Bleu
-   Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.",
+    desc: `
+    Canapé Moderne Côtelé Bleu
+    Élégant et confortable, ce canapé en tissu côtelé bleu s'intègre parfaitement à votre intérieur.
+  `,
     images: ["canaper.jpg","canaper1.jpg","canaper2.jpg","canaper3.jpg","canaper4.jpg"],
     wa: "221781739814",    // Sans +, format international Sénégal
     tel: "+221770000001"   // Avec + pour tel
   },
 
+  
+  
  
 };
 
@@ -225,6 +234,7 @@ function initSlider(sliderEl){
 </script>
 </body>
 </html>
+
 
 
 
