--- a/PNEUS2.html
+++ b/PNEUS2.html
@@ -45,7 +45,7 @@ const PRODUITS = {
 
 
   "pneu1": {
-    nom: 'Pneu1',
+    nom: 'canapé',
     prix: 60000,
     devise: 'FCFA',
     desc: `
@@ -56,9 +56,10 @@ const PRODUITS = {
     wa: "221781739814",    // Sans +, format international Sénégal
     tel: "+221770000001"   // Avec + pour tel
   },
+  
 
   "pneu2": {
-    nom: 'Pneu1',
+    nom: 'canapé',
     prix: 60000,
     devise: 'FCFA',
     desc: `
@@ -69,9 +70,10 @@ const PRODUITS = {
     wa: "221781739814",    // Sans +, format international Sénégal
     tel: "+221770000001"   // Avec + pour tel
   },
+
 
   "pneu3": {
-    nom: 'Pneu1',
+    nom: 'canapé',
     prix: 60000,
     devise: 'FCFA',
     desc: `
@@ -82,9 +84,10 @@ const PRODUITS = {
     wa: "221781739814",    // Sans +, format international Sénégal
     tel: "+221770000001"   // Avec + pour tel
   },
+  
 
   "pneu4": {
-    nom: 'Pneu1',
+    nom: 'canapé',
     prix: 60000,
     devise: 'FCFA',
     desc: `
@@ -95,9 +98,10 @@ const PRODUITS = {
     wa: "221781739814",    // Sans +, format international Sénégal
     tel: "+221770000001"   // Avec + pour tel
   },
+  
 
   "pneu5": {
-    nom: 'Pneu1',
+    nom: 'canapé',
     prix: 60000,
     devise: 'FCFA',
     desc: `
@@ -108,9 +112,10 @@ const PRODUITS = {
     wa: "221781739814",    // Sans +, format international Sénégal
     tel: "+221770000001"   // Avec + pour tel
   },
+  
 
   "pneu6": {
-    nom: 'Pneu1',
+    nom: 'canapé',
     prix: 60000,
     devise: 'FCFA',
     desc: `
@@ -121,9 +126,10 @@ const PRODUITS = {
     wa: "221781739814",    // Sans +, format international Sénégal
     tel: "+221770000001"   // Avec + pour tel
   },
+  
 
   "pneu7": {
-    nom: 'Pneu1',
+    nom: 'canapé',
     prix: 60000,
     devise: 'FCFA',
     desc: `
@@ -134,9 +140,10 @@ const PRODUITS = {
     wa: "221781739814",    // Sans +, format international Sénégal
     tel: "+221770000001"   // Avec + pour tel
   },
+  
 
   "pneu8": {
-    nom: 'Pneu1',
+    nom: 'canapé',
     prix: 60000,
     devise: 'FCFA',
     desc: `
@@ -234,6 +241,7 @@ function initSlider(sliderEl){
 </script>
 </body>
 </html>
+
 
 
 
