--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h2>Nos catégories</h2>
     <div class="produits-grid">
 
-      <a class="telly" href="PNEUS1.html">
+      <a class="telly" href="baba.html">
         <div class="produit">
         <img src="img/Meuble_et_decoration.jpg" alt="Meuble et décoration">
         <h4>1.Meuble et décoration</h4>
@@ -151,5 +151,6 @@
   </footer>
 </body>
 </html>
+
 
 
