--- a/baba.html
+++ b/baba.html
@@ -44,46 +44,47 @@
 <body>
   <div class="container">
     <h1 id="status">Vérification en cours...</h1>
-    <p id="message">Merci de patienter pendant la confirmation de votre email.</p>
-    <a id="link" href="https://tonsite.com/connexion.html" style="display:none;">Se connecter</a>
+    <p id="message">Merci de patienter.</p>
+    <a href="connexion.html" id="link" style="display:none;">Se connecter</a>
   </div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.0/firebase-app.js";
     import { getAuth, applyActionCode } from "https://www.gstatic.com/firebasejs/10.14.0/firebase-auth.js";
 
-    // 🔹 Mets ici ta config Firebase
+    // ✅ Ta config Firebase
     const firebaseConfig = {
-      apiKey: "TON_API_KEY",
-      authDomain: "TON_PROJECT.firebaseapp.com",
-      projectId: "TON_PROJECT_ID",
-      storageBucket: "TON_PROJECT.appspot.com",
-      messagingSenderId: "TON_SENDER_ID",
-      appId: "TON_APP_ID"
+      apiKey: "AIzaSyDLrPKEzDueP4j-HjAdOhmkuA74cLsCn2M",
+      authDomain: "diallo-ee5aa.firebaseapp.com",
+      projectId: "diallo-ee5aa",
+      storageBucket: "diallo-ee5aa.firebasestorage.app",
+      messagingSenderId: "662485613383",
+      appId: "1:662485613383:web:c1129a35c335cc95c0ea62",
+      measurementId: "G-F3092DTNZY"
     };
 
-    // Initialisation
+    // Init Firebase
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    // Récupérer le oobCode depuis l’URL
-    const params = new URLSearchParams(window.location.search);
-    const oobCode = params.get("oobCode");
+    // Récupère le code de l’URL
+    const urlParams = new URLSearchParams(window.location.search);
+    const oobCode = urlParams.get("oobCode");
 
     if (oobCode) {
       applyActionCode(auth, oobCode)
         .then(() => {
-          document.getElementById("status").innerText = "Email confirmé ✅";
-          document.getElementById("message").innerText = "Votre email a été confirmé avec succès !";
+          document.getElementById("status").textContent = "Email confirmé ✅";
+          document.getElementById("message").textContent = "Votre email est bien vérifié, vous pouvez maintenant vous connecter.";
           document.getElementById("link").style.display = "inline-block";
         })
         .catch((error) => {
-          document.getElementById("status").innerText = "Erreur ❌";
-          document.getElementById("message").innerText = "Impossible de confirmer l’email : " + error.message;
+          document.getElementById("status").textContent = "Erreur ❌";
+          document.getElementById("message").textContent = "Impossible de confirmer l’email : " + error.message;
         });
     } else {
-      document.getElementById("status").innerText = "Lien invalide ❌";
-      document.getElementById("message").innerText = "Aucun code de confirmation trouvé.";
+      document.getElementById("status").textContent = "Erreur ❌";
+      document.getElementById("message").textContent = "Code de vérification introuvable.";
     }
   </script>
 </body>
