--- a/baba.html
+++ b/baba.html
@@ -1,10 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Email confirmé</title>
+  <title>Confirmation / Réinitialisation</title>
   <style>
-    
     body {
       font-family: Arial, sans-serif;
       display: flex;
@@ -20,6 +20,7 @@
       border-radius: 10px;
       box-shadow: 0 5px 15px rgba(0,0,0,0.2);
       text-align: center;
+      max-width: 400px;
     }
     h1 {
       color: #009688;
@@ -28,7 +29,7 @@
     p {
       color: #333;
     }
-    a {
+    a, button {
       display: inline-block;
       margin-top: 15px;
       text-decoration: none;
@@ -36,9 +37,18 @@
       background: #009688;
       padding: 10px 20px;
       border-radius: 5px;
+      border: none;
+      cursor: pointer;
     }
-    a:hover {
+    a:hover, button:hover {
       background: #00796B;
+    }
+    input {
+      padding: 10px;
+      margin-top: 10px;
+      width: 100%;
+      border: 1px solid #ccc;
+      border-radius: 5px;
     }
   </style>
 </head>
@@ -46,12 +56,14 @@
   <div class="container">
     <h1 id="status">Vérification en cours...</h1>
     <p id="message">Merci de patienter.</p>
+    <input type="password" id="newPassword" placeholder="Nouveau mot de passe" style="display:none;" />
+    <button id="resetBtn" style="display:none;">Réinitialiser</button>
     <a href="connexion.html" id="link" style="display:none;">Se connecter</a>
   </div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.0/firebase-app.js";
-    import { getAuth, applyActionCode } from "https://www.gstatic.com/firebasejs/10.14.0/firebase-auth.js";
+    import { getAuth, applyActionCode, confirmPasswordReset } from "https://www.gstatic.com/firebasejs/10.14.0/firebase-auth.js";
 
     // ✅ Ta config Firebase
     const firebaseConfig = {
@@ -68,11 +80,13 @@
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    // Récupère le code de l’URL
+    // Récupère les paramètres de l’URL
     const urlParams = new URLSearchParams(window.location.search);
+    const mode = urlParams.get("mode");
     const oobCode = urlParams.get("oobCode");
 
-    if (oobCode) {
+    if (mode === "verifyEmail" && oobCode) {
+      // ✅ Vérification email
       applyActionCode(auth, oobCode)
         .then(() => {
           document.getElementById("status").textContent = "Email confirmé ✅";
@@ -83,9 +97,33 @@
           document.getElementById("status").textContent = "Erreur ❌";
           document.getElementById("message").textContent = "Impossible de confirmer l’email : " + error.message;
         });
+
+    } else if (mode === "resetPassword" && oobCode) {
+      // 🔑 Réinitialisation mot de passe
+      document.getElementById("status").textContent = "Réinitialisation du mot de passe 🔑";
+      document.getElementById("message").textContent = "Veuillez entrer votre nouveau mot de passe.";
+      document.getElementById("newPassword").style.display = "block";
+      document.getElementById("resetBtn").style.display = "inline-block";
+
+      document.getElementById("resetBtn").addEventListener("click", () => {
+        const newPassword = document.getElementById("newPassword").value;
+        confirmPasswordReset(auth, oobCode, newPassword)
+          .then(() => {
+            document.getElementById("status").textContent = "Mot de passe changé ✅";
+            document.getElementById("message").textContent = "Votre mot de passe a bien été réinitialisé. Vous pouvez maintenant vous connecter.";
+            document.getElementById("newPassword").style.display = "none";
+            document.getElementById("resetBtn").style.display = "none";
+            document.getElementById("link").style.display = "inline-block";
+          })
+          .catch((error) => {
+            document.getElementById("status").textContent = "Erreur ❌";
+            document.getElementById("message").textContent = "Impossible de réinitialiser : " + error.message;
+          });
+      });
+
     } else {
       document.getElementById("status").textContent = "Erreur ❌";
-      document.getElementById("message").textContent = "Code de vérification introuvable.";
+      document.getElementById("message").textContent = "Lien invalide ou expiré.";
     }
   </script>
 </body>
