--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
        </div>
       </a>
 
-      <a class="telly" href="baba.html">
+      <a class="telly" href="tata.html">
         <div class="produit">
         <img src="img/Salle_de_bain.jpg" alt="Salle de bain">
         <h4>2.Salle de bain</h4>
@@ -151,6 +151,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
