--- a/baba.html
+++ b/baba.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Confirmation / Réinitialisation</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -13,21 +14,27 @@
       min-height: 100vh;
       background: #f3f3f3;
       margin: 0;
+      padding: 0;
     }
     .container {
       background: #fff;
-      padding: 30px 40px;
+      padding: 30px 20px;
       border-radius: 10px;
       box-shadow: 0 5px 15px rgba(0,0,0,0.2);
       text-align: center;
+      width: 90%;
       max-width: 400px;
+      box-sizing: border-box;
+      margin: 10px;
     }
     h1 {
       color: #009688;
       margin-bottom: 20px;
+      font-size: 1.5em;
     }
     p {
       color: #333;
+      font-size: 1em;
     }
     a, button {
       display: inline-block;
@@ -39,6 +46,8 @@
       border-radius: 5px;
       border: none;
       cursor: pointer;
+      font-size: 1em;
+      box-sizing: border-box;
     }
     a:hover, button:hover {
       background: #00796B;
@@ -48,11 +57,12 @@
       margin-top: 10px;
     }
     input {
-      padding: 10px;
+      padding: 12px;
       width: 100%;
       border: 1px solid #ccc;
       border-radius: 5px;
       box-sizing: border-box;
+      font-size: 16px; /* empêche le zoom forcé sur iOS */
     }
     .toggle-password {
       position: absolute;
@@ -62,6 +72,20 @@
       cursor: pointer;
       font-size: 18px;
       color: #666;
+    }
+
+    /* Responsive */
+    @media (max-width: 600px) {
+      .container {
+        padding: 20px 15px;
+        width: 95%;
+      }
+      h1 {
+        font-size: 1.3em;
+      }
+      p, input, button, a {
+        font-size: 1em;
+      }
     }
   </style>
 </head>
@@ -158,26 +182,6 @@
   </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
