--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
        </div>
       </a>
 
-      <a class="telly" href="tata.html">
+      <a class="telly" href="connexion.html">
         <div class="produit">
         <img src="img/Salle_de_bain.jpg" alt="Salle de bain">
         <h4>2.Salle de bain</h4>
        </div>
       </a>
 
-     <a class="telly" href="PNEUS1.html">
+     <a class="telly" href="inscription.html">
         <div class="produit">
         <img src="img/Peinture_et_finition.jpg" alt="Peinture et finitions">
         <h4>3.Peinture et finitions</h4>
@@ -151,6 +151,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
